# own

./: CMakeLists.txt  README.md
Matlab/: make_mex.m  mexopts.sh  own_interface.cpp  own_interface.h  script.m
include/: bfm.h  bfm_centres_8.1_30.h  bfm_centres_8.4_64.h  bfm_filters.h  bfm_params.h  nms.h  own.h
src/: bfm.cpp  bfm_example.cpp  gbfm.cpp  nms.cpp  own.cpp  own_example.cpp  own_train.cpp
